fixed home page tag sometime not align properly

--- a/css/css.css
+++ b/css/css.css
@@ -291,13 +291,12 @@ color: black;
       background: #ffffff;
       color: #000;
       text-transform: uppercase;
-      top:50%;
-      left: 7%;
+      margin-top: 15%;
+      margin-left: 7%;
       padding: 10px;
       box-shadow: 0px 0px 0px 0px #ffffff;
       mix-blend-mode: lighten;
       line-height: 1;
-      position: relative;
       display: inline-block;
       font-size: 26px !important;
       font-family: IBM Plex Sans bold, sans-serif;
